tests/ui/simd/scalable/disallow-capture-closure.stderr
error[E0277]: the size for values of type `[i32]` cannot be known at compilation time
  --> $DIR/disallow-capture-closure.rs:45:26
   |
LL |     run(move || {
   |              -- this closure captures all values by move
LL |         svxar_n_s32::<2>(a, a);
   |                          ^ doesn't have a size known at compile-time
   |
   = help: within `svint32_t`, the trait `Sized` is not implemented for `[i32]`, which is required by `svint32_t: Sized`
note: required because it appears within the type `svint32_t`
  --> $DIR/disallow-capture-closure.rs:13:12
   |
LL | pub struct svint32_t {
   |            ^^^^^^^^^
   = note: all values captured by value by a closure must have a statically known size

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
